Fixes opacity on mobile and desktop

--- a/stylesheets/image-title-desktop.scss
+++ b/stylesheets/image-title-desktop.scss
@@ -62,8 +62,8 @@
     margin-top: 0px;
     margin-bottom: 0px;
     position: absolute;
-    top: 530px;
-    left: 50px;
+    top: 70px;
+    left: 51px;
     height: 78px;
     width: 200px;
   }
