--- a/stylesheets/image-title-mobile.scss
+++ b/stylesheets/image-title-mobile.scss
@@ -12,6 +12,7 @@
     margin-bottom: 80px;
     text-align: center;
     font-size: 20px;
+    z-index: 5;
   }
 }
 .s4 {
